--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "@graphql-tools/utils": "^8.5.5",
     "apollo-server-micro": "^3.5.0",
+    "dotenv": "^10.0.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
     "eslint": "8.5.0",
