--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.9",
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-tools/utils": "^8.5.5",
     "apollo-server-micro": "^3.5.0",
     "dotenv": "^10.0.0",
     "graphql": "^15.8.0",
+    "graphql-tools": "^8.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.4.5",
+    "@graphql-codegen/typescript-resolvers": "2.5.2",
     "@types/dotenv": "^8.2.0",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4",
-    "@graphql-codegen/typescript-resolvers": "2.5.2",
-    "@graphql-codegen/typescript": "2.4.5",
-    "@graphql-codegen/cli": "2.6.2"
+    "typescript": "4.5.4"
   }
 }
