--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml",
+    "compose:up": "docker compose up",
+    "compose:down": "docker compose down",
+    "compose:start": "docker compose start",
+    "compose:stop": "docker compose stop"
   },
   "dependencies": {
     "@apollo/client": "^3.5.9",
-    "@graphql-codegen/cli": "^2.6.2",
     "@graphql-tools/utils": "^8.5.5",
     "apollo-server-micro": "^3.5.0",
     "dotenv": "^10.0.0",
@@ -22,7 +25,7 @@
     "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript": "2.4.5",
     "@graphql-codegen/typescript-resolvers": "2.5.2",
     "@types/dotenv": "^8.2.0",
